--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="public/css/startseite.css">
+    <link rel="stylesheet" href="https://github.com/n-ltrz/my-first-website-project/blob/main/public/css/startseite.css">
 
 
     <title>About me</title>
