--- a/public/pages/bdaycake.html
+++ b/public/pages/bdaycake.html
@@ -22,7 +22,7 @@
        
        <h2>On the 12th May</h2>
 
-       <img src="../../Assets/IMGs/bdaycake.jpg" alt="here you would see an image of a birthday cake" width="500px">
+       <img src="../assets/images/bdaycake.jpg" alt="here you would see an image of a birthday cake" width="500px">
 
        <h3>What to bring:</h3>
 
